[project]
name = "textual-mastermind"
version = "1.0.10"
description = "Mastermind game built with Textual"
authors = [{ name = "Rafal Padkowski", email = "rafaelp@poczta.onet.pl" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "textual>=2.1.2",
    "textual-utils>=1.0.8,<2",
]

[project.scripts]
mm = "textual_mastermind:main"

[dependency-groups]
dev = ["textual-dev>=1.7.0"]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

