[project]
name = "textual-mastermind"
version = "1.0.10"
description = "Mastermind game built with Textual"
authors = [{ name = "Rafal Padkowski", email = "rafaelp@poczta.onet.pl" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "config",
    "i18n",
    "textual>=6.3.0",
    "textual-utils>=2.1.0",
]

[project.scripts]
mm = "textual_mastermind:main"

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
i18n = { git = "https://github.com/RafalPadkowski/i18n.git" }
config = { git = "https://github.com/RafalPadkowski/config.git" }
